.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/Availability_Schedule_Day__c.object-meta.xml
<CustomObject>
    <label>Availability Schedule Day</label>
    <nameField>
        <displayFormat>ASD-{YYYY}-{MM}-{DD}-{0}</displayFormat>
        <label>Availability Schedule Day Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Availability Schedule Days</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>