.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/Add_Note__c.field-meta.xml
<CustomField>
    <fullName>Add_Note__c</fullName>
    <label>Add Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>