.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/Availability_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Availability_Schedule__c</fullName>
    <label>Availability Schedule</label>
    <referenceTo>Availability_Schedule__c</referenceTo>
    <relationshipLabel>Availability Schedule Days</relationshipLabel>
    <relationshipName>Availability_Schedule_Days</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>