.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <label>End Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_List_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>