.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <label>Start Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Time_List_Global_Value_Set</valueSetName>
    </valueSet>
</CustomField>