.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Available</fullName>
            </value>
            <value>
                <fullName>Unavailable</fullName>
            </value>
            <value>
                <fullName>Partially Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>