.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/TypeSlot__c.field-meta.xml
<CustomField>
    <fullName>TypeSlot__c</fullName>
    <label>Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AM - Available</fullName>
            </value>
            <value>
                <fullName>AM - Unavailable</fullName>
            </value>
            <value>
                <fullName>PM - Available</fullName>
            </value>
            <value>
                <fullName>PM - Unavailable</fullName>
            </value>
            <value>
                <fullName>ND - Available</fullName>
            </value>
            <value>
                <fullName>ND - Unavailable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>