.vscode/allianceuat_compare/force-app/main/default/objects/Availability_Schedule_Day__c/fields/Week__c.field-meta.xml
<CustomField>
    <fullName>Week__c</fullName>
    <label>Week</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Week 1</fullName>
            </value>
            <value>
                <fullName>Week 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>